src/test/ui/native-library-link-flags/modifiers-override.stderr
error: multiple `modifiers` arguments in a single `#[link]` attribute
  --> $DIR/modifiers-override.rs:11:5
   |
LL |     modifiers = "+bundle"
   |     ^^^^^^^^^^^^^^^^^^^^^

error: multiple `whole-archive` modifiers in a single `modifiers` argument
  --> $DIR/modifiers-override.rs:9:17
   |
LL |     modifiers = "+whole-archive,-whole-archive",
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

